fix version conflicts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 streamlit
-transformers
-torch
-opencv-python
-scikit-image
-opencv-python-headless
-tensorflow
-torch
 pandas
 numpy
 scikit-learn
 matplotlib
 seaborn
+transformers==4.26.0
+torch
+opencv-python
+scikit-image
+opencv-python-headless
+keras==2.12.0
+tensorflow==2.12.0
